# CEDR-ML-PEFT

./: .bash_history  .gitignore  CEDR_tutorial.md  CMakeLists.txt  Dockerfile  LICENSE  Makefile  README.md  building.sh  daemon_config.json  install_dependencies.sh
applications/APIApps/DoS_loop_apis/: DoS_fft.cpp  DoS_zip.cpp  Makefile
applications/APIApps/SAR/: Makefile  SAR-noapi.cpp  SAR.cpp  SAR_nb.cpp
applications/APIApps/api_example/: api_example.cpp
applications/APIApps/api_example_nb/: Makefile  api_example_nb.cpp
applications/APIApps/availtime_disturbing_apis/: Makefile  availtime_zip.cpp
applications/APIApps/fft_pe_analysis/: Makefile  fft_pe_analysis.cpp
applications/APIApps/fft_test/: Makefile  fft_test.cpp
applications/APIApps/lane_detection/: Makefile  conv_nb.cpp  track.cpp  track_2Dconv.cpp  track_2Dconv_uint8.cpp
applications/APIApps/pulse_doppler/: Makefile  pulse_doppler.c  pulse_doppler_nb.c  pulse_doppler_nb_zip.c  pulse_doppler_phased_nb.c
applications/APIApps/radar_correlator/: Makefile  radar_correlator.c  radar_correlator_no_api.c  radar_correlator_non_api.c  radar_correlator_zip.c
applications/APIApps/radar_correlator_v1/: Makefile  radar_correlator_v1.c
applications/APIApps/spectre_flush_arm/: Makefile  README.md
applications/APIApps/spectre_v1_x86/: Makefile  README.md  main.cpp
applications/APIApps/temporal_mitigation/: Makefile  inverse.h  main-noapi.cpp  main.cpp  main_zip.cpp  mmultiply.cpp
applications/APIApps/udma_read_write/: Makefile  udma_read.cpp  udma_write.cpp
applications/HandCraftedApps/SAR_RDA_double_streaming_acc/: Makefile  SAR_RDA.cpp  SAR_RDA.json
applications/HandCraftedApps/correlator/: Makefile
applications/HandCraftedApps/correlator_ds_acce/: Makefile  correlator.cpp  debug.cpp  debug.h
applications/HandCraftedApps/pulse_doppler/: Makefile  pulse_doppler.cpp
applications/HandCraftedApps/temporal_mitigation_pipeline_ds_acce/: Makefile  temporal_mitigation.cpp
applications/SAR/: Makefile  SAR_non_api.cpp
applications/SAR/output/: correct_SAR_output.txt
applications/api_example/: Makefile  api_example_api.cpp  api_example_non_api.cpp
applications/cyclic_10tasks/: simple_10_task_nb.cpp
applications/pulse_doppler/: Makefile  pulse_doppler_non_api.c
applications/radar_correlator/: Makefile  radar_correlator_non_api.c
applications/standalone_include/: gsl_wrapper.h
applications/wifi-tx/: README.txt
applications/wifi-tx/src/: TX_non_api.cpp
att-bilstm-model/: att-bilstm-model-pretrain.py  att-bilstm-model-runtime.py  best_model.pth  input_data.csv  smart_papi_log.jsonl  synthetic_output.json
libdash/: CMakeLists.txt  dash.h  dash_types.h  platform.h
libdash/conv_2d/: CMakeLists.txt  conv_2d.cpp  conv_2d.h
libdash/cpu/: blas.cpp  convolution.cpp  fft.cpp  gemm.cpp  modulation.cpp  new_APIs.cpp  zip.cpp
libdash/dma/: dma.cpp  dma.h
libdash/fft/: fft.cpp  fft.h
libdash/gemm/: gemm.cpp  gemm.h
libdash/gpu/: CMakeLists.txt  gpu_conv2d.cu  gpu_fft.cu  gpu_zip.cu
libdash/zip/: zip.cpp  zip.h
libdash/zip/old/: zip.h
neural_networks/: .npy  ae_experiment_log.txt  feature_analysis.py  global_model_preprocessing.py  models.py  plot_app_results.py  plot_violin.py  test_AE.py  test_model_per_conf.py  train_validate_test.py
neural_networks/AE_demo/: README.md  ae_experiment_log.txt  feature_analysis.py  models.py  requirements.txt  test_AE.py
neural_networks/AE_demo/AE_model_binary/: fingerprint.pb  keras_metadata.pb  saved_model.pb
neural_networks/raw_offline_dataset/: AD_offline_test_all.npz  AD_offline_train_all.npz  AD_offline_val_all.npz  test.npz  test_data.npz  test_labels.npz
neural_networks/saved_models/ae_app_features_only/: fingerprint.pb  keras_metadata.pb  saved_model.pb
neural_networks/saved_models/ae_hardware_features_only/: fingerprint.pb  keras_metadata.pb  saved_model.pb
neural_networks/saved_models/ae_hardware_plus_microarch_features/: fingerprint.pb  keras_metadata.pb  saved_model.pb
neural_networks/saved_models/ae_hardware_plus_microarch_plus_runtime_features/: fingerprint.pb  keras_metadata.pb  saved_model.pb
neural_networks/saved_models/ae_microarch_features/: fingerprint.pb  keras_metadata.pb  saved_model.pb
neural_networks/saved_models/ae_runtime_features/: fingerprint.pb  keras_metadata.pb  saved_model.pb
neural_networks/saved_models/ae_runtime_plus_app_features/: fingerprint.pb  keras_metadata.pb  saved_model.pb
neural_networks/saved_models/ae_zcu102_only/: fingerprint.pb  saved_model.pb
neural_networks/saved_models/vae/: fingerprint.pb  keras_metadata.pb  saved_model.pb
original_files/zip_AUP-ZU3/: zip.cpp  zip.h
original_files/zip_ZedBoard/: zip.cpp  zip.h
scripts/: api_costs.py  average_pe_run.py  generate_daemon_config.sh
scripts/DSE/: generate_daemon_config.sh  run_sweep.sh
scripts/LargeScaleSweep/3.plotting/: 2dplot_inj.py
scripts/hopperfish_scripts/: generate_daemon_config.sh  hopperfish_vtune_events.cfg  multi_app_sweep_per_round.sh  run_workload_with_overhead_profiling.sh  vtune_profiling.sh  zcu102_power_test.c
scripts/scripts-API/: 2dplot_hwconf.py  makedataframe.py  plt3dplot_inj.py
scripts/scripts-API/riscv-scripts/: 2dplot_hwconf.py  makedataframe.py  plt3dplot_inj.py
scripts/scripts-API/run_scripts/: daemon_generator.py  run_sub_dag.sh
src-api/: config_manager.cpp  main.cpp  runtime.cpp  scheduler.cpp  threads.cpp
src-api-realtime-prof/: autoencoder_kernel.cpp  config_manager.cpp  il_policy.cpp  main.cpp  runtime.cpp  scheduler.cpp  threads.cpp
src-api-realtime-prof/include/: config_manager.hpp  header.hpp  performance_monitor.hpp  runtime.hpp  scheduler.hpp
src-api/include/: PerfProfiler.hpp  config_manager.hpp  header.hpp  il_oracle.hpp  performance_monitor.hpp  runtime.hpp  threads.hpp
src-dag/: hwschd.cpp  main.cpp  runtime.cpp  scheduler.cpp  threads.cpp
src-dag/include/: header.hpp  hwschd.h
test/: Makefile
toolchains/: arm32-linux-gnu.toolchain.cmake  riscv64-linux-gnu.toolchain.cmake
tutorial_README/: tutorial0.md  tutorial1.md  tutorial2.md  tutorial3.md
(+82 files in other folders)
